Fixes broken main menu (floating, overlapping)

--- a/assets/css/less/responsive/768-max.less
+++ b/assets/css/less/responsive/768-max.less
@@ -27,6 +27,7 @@ header {
 
 }
 
+.languages{right: 10px;}
 
 .languages,
 .navigation-header li a {
